--- a/CLEAREAD-WechatFlashcardUpload.ipynb
+++ b/CLEAREAD-WechatFlashcardUpload.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T08:20:36.022631Z",
-     "start_time": "2020-07-16T08:20:35.956808Z"
+     "end_time": "2020-07-30T06:58:50.209529Z",
+     "start_time": "2020-07-30T06:58:50.174656Z"
     }
    },
    "outputs": [],
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T08:20:36.332419Z",
-     "start_time": "2020-07-16T08:20:36.301503Z"
+     "end_time": "2020-07-30T06:58:50.541642Z",
+     "start_time": "2020-07-30T06:58:50.518703Z"
     }
    },
    "outputs": [],
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T08:20:46.845059Z",
-     "start_time": "2020-07-16T08:20:36.726834Z"
+     "end_time": "2020-07-30T06:59:00.103079Z",
+     "start_time": "2020-07-30T06:58:50.784994Z"
     }
    },
    "outputs": [
@@ -47,8 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter the name of the FC fileFC-1\n",
-      "please enter the counts of the images108\n"
+      "please enter the name of the FC fileFC-v2\n",
+      "please enter the counts of the images102\n"
      ]
     }
    ],
@@ -59,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T08:25:14.484636Z",
-     "start_time": "2020-07-16T08:20:47.341731Z"
+     "end_time": "2020-07-30T07:03:12.665521Z",
+     "start_time": "2020-07-30T06:59:01.911245Z"
     }
    },
    "outputs": [],
