--- a/CLEAREAD-v0.ipynb
+++ b/CLEAREAD-v0.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:20.068159Z",
-     "start_time": "2020-07-16T15:05:19.491306Z"
+     "end_time": "2020-07-30T03:52:26.171678Z",
+     "start_time": "2020-07-30T03:52:20.825389Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:20.076018Z",
-     "start_time": "2020-07-16T15:05:20.069999Z"
+     "end_time": "2020-07-30T03:52:26.183651Z",
+     "start_time": "2020-07-30T03:52:26.174671Z"
     }
    },
    "outputs": [],
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:21.909543Z",
-     "start_time": "2020-07-16T15:05:21.852695Z"
+     "end_time": "2020-07-30T03:52:26.271420Z",
+     "start_time": "2020-07-30T03:52:26.186641Z"
     }
    },
    "outputs": [],
@@ -104,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:23.683800Z",
-     "start_time": "2020-07-16T15:05:23.664851Z"
+     "end_time": "2020-07-30T03:52:26.324271Z",
+     "start_time": "2020-07-30T03:52:26.276400Z"
     }
    },
    "outputs": [],
@@ -116,33 +116,27 @@
     "lemma_easy_word_list = []\n",
     "\n",
     "for i in range(0,len(easy_word_list)):\n",
-    "    lemma_word = lemma.get(easy_word_list[i], reverse = True)\n",
+    "    lemma_word = lemma.get(easy_word_list[i], reverse = False)\n",
     "    if lemma_word == None:\n",
     "        lemma_easy_word_list.append(easy_word_list[i])\n",
     "    else:\n",
-    "        lemma_easy_word_list.append(lemma_word[0])\n",
+    "        for j in range(0,len(lemma_word)):\n",
+    "            lemma_easy_word_list.append(lemma_word[j])\n",
+    "        lemma_easy_word_list.append(easy_word_list[i])\n",
+    "            \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:47.779756Z",
-     "start_time": "2020-07-16T15:05:24.112654Z"
+     "end_time": "2020-07-30T03:52:41.021101Z",
+     "start_time": "2020-07-30T03:52:26.327264Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\apps\\Anaconda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (11) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# word category\n",
     "GMAT_list = []\n",
@@ -163,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:57.334624Z",
-     "start_time": "2020-07-16T15:05:47.795713Z"
+     "end_time": "2020-07-30T03:53:05.983777Z",
+     "start_time": "2020-07-30T03:52:41.054016Z"
     }
    },
    "outputs": [
@@ -175,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the name of the bookAnimal Farm\n"
+      "enter the name of the bookSomething I've Been Meaning to - Alice Munro\n"
      ]
     }
    ],
@@ -185,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:09:01.315652Z",
-     "start_time": "2020-07-16T15:05:58.031936Z"
+     "end_time": "2020-07-30T04:00:41.462005Z",
+     "start_time": "2020-07-30T03:53:06.790892Z"
     }
    },
    "outputs": [],
    "source": [
-    "with open(bookname + \".txt\", 'r',encoding='utf-8') as file:\n",
+    "with open(bookname + \".txt\", 'r',encoding='unicode_escape') as file:\n",
     "    text = file.read().rstrip()\n",
     "\n",
     "# remove puntuation\n",
@@ -259,31 +253,6 @@
     "    except IndexError:\n",
     "        pass     \n",
     "data.to_csv( bookname + \"vocabularycounts_v0.csv\",index=False,header=True)            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-07-16T09:40:50.709890Z",
-     "start_time": "2020-07-16T09:40:50.698959Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['stairs']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lemma.get('stair', reverse = True)"
    ]
   },
   {
