--- a/CLEAREAD-v3.ipynb
+++ b/CLEAREAD-v3.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-15T04:51:16.050211Z",
-     "start_time": "2020-07-15T04:51:14.380673Z"
+     "end_time": "2020-07-30T04:29:15.427361Z",
+     "start_time": "2020-07-30T04:29:14.916726Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-15T04:51:47.923013Z",
-     "start_time": "2020-07-15T04:51:18.308178Z"
+     "end_time": "2020-07-30T04:29:15.554022Z",
+     "start_time": "2020-07-30T04:29:15.549038Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"master_word_list.json\",'r') as load_f:\n",
+    "    master_word_dict = json.load(load_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-30T04:29:32.592592Z",
+     "start_time": "2020-07-30T04:29:19.461705Z"
     }
    },
    "outputs": [],
@@ -72,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-17T04:06:34.705671Z",
-     "start_time": "2020-07-17T04:06:33.038151Z"
+     "end_time": "2020-07-30T04:29:46.923371Z",
+     "start_time": "2020-07-30T04:29:32.598575Z"
     }
    },
    "outputs": [
@@ -84,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the name of the v2fileAnimal Farmvocabularycounts_v2\n"
+      "enter the name of the v2fileSomething I've Been Meaning to - Alice Munrovocabularycounts_v2\n"
      ]
     }
    ],
@@ -94,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-17T04:18:15.916879Z",
-     "start_time": "2020-07-17T04:06:36.001520Z"
+     "end_time": "2020-07-30T04:42:45.430691Z",
+     "start_time": "2020-07-30T04:30:01.607563Z"
     }
    },
    "outputs": [
@@ -106,121 +121,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "windmill\n",
-      "clover\n",
-      "hoof\n",
-      "stall\n",
-      "ration\n",
-      "cowshed\n",
-      "pasture\n",
-      "orchard\n",
-      "fling\n",
+      "mock\n",
+      "couch\n",
       "spite\n",
-      "bleat\n",
-      "trotter\n",
-      "expulsion\n",
-      "quarry\n",
-      "pellet\n",
-      "growl\n",
-      "cockerel\n",
-      "barley\n",
-      "gallop\n",
-      "fro\n",
-      "wound\n",
-      "perch\n",
-      "whisk\n",
-      "snuff\n",
-      "thou\n",
-      "hind\n",
-      "onward\n",
-      "toil\n",
-      "maxim\n",
-      "boar\n",
-      "knoll\n",
-      "machinery\n",
-      "skull\n",
-      "boulder\n",
-      "decree\n",
-      "procure\n",
-      "oat\n",
-      "flagstaff\n",
-      "mane\n",
-      "dynamo\n",
-      "overthrow\n",
-      "mare\n",
-      "simultaneously\n",
-      "uproar\n",
-      "thresh\n",
-      "inscribe\n",
-      "raven\n",
-      "lash\n",
-      "hayfield\n",
-      "duckling\n",
-      "flutter\n",
-      "tread\n",
-      "knacker\n",
-      "shrill\n",
-      "hoist\n",
-      "mash\n",
-      "suppress\n",
-      "ready for chinese translation\n",
-      "风车\n",
-      "三叶草\n",
-      "蹄\n",
-      "失速\n",
-      "定额\n",
-      "牛棚\n",
-      "牧场\n",
-      "果园\n",
-      "猛扔\n",
-      "怨恨\n",
-      "惨叫\n",
-      "小跑\n",
-      "驱逐\n",
-      "采石场\n",
-      "弹丸\n",
-      "咆哮\n",
-      "公鸡\n",
-      "大麦\n",
-      "驰骋\n",
-      "从\n",
-      "伤口\n",
-      "鲈鱼\n",
-      "搅拌\n",
-      "鼻烟\n",
-      "你\n",
-      "后面的\n",
-      "向前的\n",
-      "辛苦工作\n",
-      "格言\n",
-      "野猪\n",
-      "小丘\n",
-      "机械\n",
-      "颅骨\n",
-      "巨石\n",
-      "法令\n",
-      "采购\n",
-      "燕麦\n",
-      "旗杆\n",
-      "鬃毛\n",
-      "发电机\n",
-      "推翻\n",
-      "母马\n",
-      "同时\n",
-      "喧嚣\n",
-      "脱粒\n",
-      "题词\n",
-      "掠夺\n",
-      "睫毛\n",
-      "海菲尔德\n",
-      "小鸭\n",
-      "颤振\n",
-      "踩\n",
-      "骗子\n",
-      "尖叫\n",
-      "升起\n",
-      "捣碎\n",
-      "抑制\n"
+      "pier\n",
+      "dine\n",
+      "cemetery\n",
+      "fairground\n",
+      "grab\n",
+      "vomit\n",
+      "stave\n",
+      "gin\n",
+      "flap\n",
+      "outfit\n",
+      "embroider\n",
+      "wade\n",
+      "presumable\n",
+      "meditate\n",
+      "closet\n",
+      "peanut\n",
+      "spin-dry\n",
+      "rip\n",
+      "mow\n",
+      "limestone\n",
+      "fling\n",
+      "shrub\n",
+      "fraud\n",
+      "tar\n",
+      "haul\n",
+      "eyelid\n",
+      "bleach\n",
+      "braid\n",
+      "stroll\n",
+      "doorway\n",
+      "copyright\n",
+      "satin\n",
+      "commonplace\n",
+      "humiliate\n",
+      "sap\n",
+      "discourse\n",
+      "landscape\n",
+      "wringer\n",
+      "forgiveness\n",
+      "literally\n",
+      "asthma\n",
+      "psychiatrist\n",
+      "skinny\n",
+      "relish\n",
+      "quiver\n",
+      "kidney\n",
+      "filthy\n",
+      "frail\n",
+      "scornful\n",
+      "wagon\n",
+      "elm\n",
+      "lumberjack\n",
+      "cot\n",
+      "mattress\n",
+      "pneumonia\n",
+      "disgrace\n",
+      "ready for chinese translation\n"
      ]
     }
    ],
@@ -229,8 +189,8 @@
     "reader = csv.reader(csvFile)\n",
     "\n",
     "# API id and key\n",
-    "app_id = '491e882b'\n",
-    "app_key = 'a0b004ca6b5f7f4e820832f3dc934355'\n",
+    "app_id = '7306b1b6'\n",
+    "app_key = '11013df45a50b3d7960bdcb4fe77af01'\n",
     "\n",
     "word_pron_char_cate=[]\n",
     "for i in reader:\n",
@@ -269,6 +229,10 @@
     "        i[2] = 'v.'\n",
     "    if i[2] == 'Adverb':\n",
     "        i[2] = 'adv.'\n",
+    "    if i[2] == 'Preposition':\n",
+    "        i[2] = 'prep.'       \n",
+    "    if i[2] == 'Conjunction':\n",
+    "        i[2] = 'conj.' \n",
     "\n",
     "# Baidu API for EN-CN Translate\n",
     "appid = '20200627000507736'  # 填写你的appid\n",
@@ -302,7 +266,142 @@
     "    \n",
     "    except Exception as e:\n",
     "        pass\n",
+    "    \n",
+    "def get_key (dict, value):\n",
+    "    return [k for k, v in dict.items() if v == value]\n",
+    "for i in range(0,len(word_pron_char_cate_cn)):\n",
+    "    for j in list(master_word_dict.values()):\n",
+    "        if word_pron_char_cate_cn[i][0] in j:\n",
+    "            word_pron_char_cate_cn[i].append('Replicate')\n",
+    "        else:\n",
+    "            pass    \n",
+    "fileObject = open(filename + '_v3.txt', 'w',encoding='utf-8')\n",
+    "for i in word_pron_char_cate_cn:\n",
+    "    for j in i:\n",
+    "        fileObject.write(j)\n",
+    "        fileObject.write(' ')\n",
+    "    fileObject.write('\\n')\n",
+    "fileObject.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-30T04:53:00.703045Z",
+     "start_time": "2020-07-30T04:52:34.358924Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "嘲弄\n",
+      "沙发\n",
+      "怨恨\n",
+      "码头\n",
+      "设宴款待\n",
+      "墓地\n",
+      "游乐场\n",
+      "抓住\n",
+      "呕吐物\n",
+      "梯级\n",
+      "杜松子酒\n",
+      "拍打\n",
+      "装备\n",
+      "刺绣\n",
+      "韦德\n",
+      "可能的\n",
+      "冥想\n",
+      "衣柜\n",
+      "花生\n",
+      "旋干\n",
+      "裂开\n",
+      "修剪\n",
+      "石灰石\n",
+      "猛扔\n",
+      "灌木\n",
+      "欺诈\n",
+      "焦油\n",
+      "拖\n",
+      "眼睑\n",
+      "漂白剂\n",
+      "编织物\n",
+      "散步\n",
+      "门道\n",
+      "版权\n",
+      "缎子\n",
+      "常见的事\n",
+      "羞辱\n",
+      "活力\n",
+      "话语\n",
+      "景观\n",
+      "扭动\n",
+      "宽恕\n",
+      "从字面上看\n",
+      "哮喘\n",
+      "精神病医生\n",
+      "极瘦的\n",
+      "津津有味\n",
+      "颤抖\n",
+      "肾\n",
+      "肮脏的\n",
+      "脆弱的\n",
+      "轻蔑的\n",
+      "马车\n",
+      "榆树\n",
+      "伐木工人\n",
+      "童床\n",
+      "床垫\n",
+      "肺炎\n",
+      "耻辱\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Baidu API for EN-CN Translate\n",
+    "appid = '20200627000507736'  # 填写你的appid\n",
+    "secretKey = 'G3ghonyD9dfI39NnFtGN'  # 填写你的密钥\n",
     "\n",
+    "httpClient = None\n",
+    "myurl = '/api/trans/vip/translate'\n",
+    "\n",
+    "fromLang = 'en'   #原文语种\n",
+    "toLang = 'zh'   #译文语种\n",
+    "\n",
+    "word_pron_char_cate_cn = []\n",
+    "for i in word_pron_char_cate:\n",
+    "    salt = random.randint(32768, 65536)\n",
+    "    sign = appid + i[0] + str(salt) + secretKey\n",
+    "    sign = hashlib.md5(sign.encode()).hexdigest()\n",
+    "    myurl = myurl + '?appid=' + appid + '&q=' + urllib.parse.quote(i[0]) + '&from=' + fromLang + '&to=' + toLang + '&salt=' + str(salt) + '&sign=' + sign\n",
+    "\n",
+    "    try:\n",
+    "        httpClient = http.client.HTTPConnection('api.fanyi.baidu.com')\n",
+    "        httpClient.request('GET', myurl)\n",
+    "\n",
+    "        # response是HTTPResponse对象\n",
+    "        response = httpClient.getresponse()\n",
+    "        result_all = response.read().decode(\"utf-8\")\n",
+    "        result = json.loads(result_all)['trans_result'][0]['dst']\n",
+    "        i.append(result)\n",
+    "        print(result)\n",
+    "        word_pron_char_cate_cn.append(i)\n",
+    "\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        pass\n",
+    "    \n",
+    "def get_key (dict, value):\n",
+    "    return [k for k, v in dict.items() if v == value]\n",
+    "for i in range(0,len(word_pron_char_cate_cn)):\n",
+    "    for j in list(master_word_dict.values()):\n",
+    "        if word_pron_char_cate_cn[i][0] in j:\n",
+    "            word_pron_char_cate_cn[i].append('Replicate')\n",
+    "        else:\n",
+    "            pass    \n",
     "fileObject = open(filename + '_v3.txt', 'w',encoding='utf-8')\n",
     "for i in word_pron_char_cate_cn:\n",
     "    for j in i:\n",
